11886
{noformat}
$ sbt console
[info] Loading project definition from /home/apm/clones/ScalaCollider/project
[info] Set current project to ScalaCollider (in build file:/home/apm/clones/ScalaCollider/)
[info] Starting scala interpreter...
[info] 
import de.sciss.osc
import de.sciss.synth._
import ugen._
import Predef.{any2stringadd=>_}
import Ops._
s: de.sciss.synth.Server
boot: ()Unit
Welcome to Scala version 2.11.6 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_40).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :pa
// Entering paste mode (ctrl-D to finish)

  SynthGraph {
    val a   = FreeVerb.ar(1, mix = 0, room = 40, damp = 0)
    val b   = a ring3 -1
    val c   = Klang.ar(specs = a, freqScale = 37, freqOffset = b)
    val d   = Constant(0).max(c)
    val e   = Ball.ar(DC.ar(0), g = 46, damp = 1, friction = 0)
    val mix = Mix(Seq(e, d))
  }

// Exiting paste mode, now interpreting.

<console>:22: error: recursive value a needs type
                  val c   = Klang.ar(specs = a, freqScale = 37, freqOffset = b)
                      ^
<console>:20: warning: failed to determine if 'mix = ...' is a named argument or an assignment expression.
an explicit type is required for the definition mentioned in the error message above.
                  val a   = FreeVerb.ar(1, mix = 0, room = 40, damp = 0)
                                               ^
{noformat}
Your init lines don't disable any2stringadd; I had a version of REPL that bubbled such an import to the top of the template, where it would work as expected.

Your attachment suggests something may not be aligned:
{noformat}
     library version: version 2.11.6
    compiler version: version 2.11.5
  reconstructed args: -classpath .:/home/hhrutz/Documents/devel/ScalaColliderSwing/ScalaCollider.jar
{noformat}
